# streamline-scheduler

./: .gitignore  CICD_OVERVIEW.md  COMPLETE_SETUP_SUMMARY.md  DEPLOYMENT_SETUP_SUMMARY.md  DOCKER.md  Dockerfile  GITHUB_ACTIONS_SETUP.md  K8S_QUICKSTART.md  KUBERNETES_DEPLOYMENT.md  LICENSE  MIGRATIONS.md  README.md  SSO_INTEGRATION.md  SSO_QUICK_START.md  WORKFLOWS_ARCHITECTURE.md  deploy.sh  docker-compose.yml  env.example  generate-ssl-cert.sh  nginx.conf  setup-k8s-secrets.sh  setup_dev.sh  setup_prod.sh  shell.nix
.github/: copilot-instructions.md
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  compose.yaml  pom.xml
backend_new/: API.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.example
backend_new/src/: errors.rs  main.rs  state.rs
backend_new/src/auth/: mod.rs
backend_new/src/entities/: calendar_events.rs  calendars.rs  can_do_list.rs  mod.rs  projects.rs  users.rs
backend_new/src/handlers/: auth.rs  calendar_events.rs  calendars.rs  can_do_list.rs  health.rs  mod.rs  projects.rs
backend_new/src/middleware/: auth.rs
backend_new/src/migrator/: m20240101_000001_create_auth_schema.rs  m20240101_000003_create_projects_table.rs  m20240101_000004_create_can_do_list_table.rs  m20240101_000005_create_calendars_table.rs
backend_new/src/models/: can_do_list.rs  mod.rs  project.rs  user.rs
backend_new/src/websocket/: mod.rs
docs/: INDEX.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  env.example  jest.config.js  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml
(+393 files in other folders)
